2016-03-18  Jean-Louis Martineau <JMartineau@carbonite.com>
	* xfer-src/element-glue.c (do_directtcp_accept): Increase timeout to
	  840

2016-03-18  Jean-Louis Martineau <JMartineau@carbonite.com>
	Add RESTORE command in the cmdfile
	* man/xml-source/amfetchdump.8.xml: Document new --reserve-tapes and
	  --release-tapes options
	* perl/Amanda/Cmdfile.swg: Add CMD_RESTORE
	* perl/Amanda/DB/Catalog.pm: Get the pool fromthe find result
	* perl/Amanda/FetchDump.pm: Add release-tapes and reserve-tapes
	* perl/Amanda/Recovery/Planner.pm: Add the pool
	* perl/Amanda/Restore.pm: Handle release-tapes and reserve-tapes
	* server-src/amfetchdump.pl: New --release-tapes and --reserve-tapes
	  options
	* server-src/cmdfile.c: Add CMD_RESTORE
	* server-src/cmdfile.h: Add CMD_RESTORE
	* server-src/find.h (find_result_t): Add pool in the struct
	* server-src/tapefile.c: Compute retention for CMD_RESTORE command

2016-03-18  Jean-Louis Martineau <JMartineau@carbonite.com>
	Add "POOL:pool" to many taper log lines
	* perl/Amanda/DB/Catalog.pm: Parse POOL:pool
	* perl/Amanda/Logfile.swg: Add pool
	* perl/Amanda/Report.pm: Parse POOL:pool
	* perl/Amanda/Taper/Worker.pm: Add "POOL:pool" to many taper log lines
	* server-src/find.c: Parse POOL:pool
	* installcheck/Amanda_Report.pl, installcheck/Amanda_Rest_Dumps.pl,
	  installcheck/Installcheck/Catalogs.pm, installcheck/taper.pl: Fix

2016-03-18  Jean-Louis Martineau <JMartineau@carbonite.com>
	* perl/Amanda/Changer.pm (Reservation::set_device_error): New method
	* perl/Amanda/Changer/aggregate.pm (set_device_error): New method
	* perl/Amanda/Changer/multi.pm (set_device_error): New method
	* perl/Amanda/Changer/robot.pm (set_device_error): New method
	* perl/Amanda/ScanInventory.pm: Use a global seen hash
	* perl/Amanda/Taper/Scan/lexical.pm,
	  perl/Amanda/Taper/Scan/oldest.pm: Samll fix
	* perl/Amanda/Taper/Scribe.pm: Call $reservation->set_device_error
	* installcheck/Amanda_Taper_Scan_lexical.pl,